ci: fix(close-pr): fix close pr steps
fix:
﻿2025-01-15T05:08:30.4827766Z ##[group]Run actions/stale@v9
with:
  days-before-pr-stale: 0
  days-before-pr-close: 0
  stale-pr-message: This pull request has been automatically closed because you can not submit pr while build.yml changing.

  repo-token: ***
  days-before-stale: 60
  days-before-close: 7
  stale-issue-label: Stale
  close-issue-reason: not_planned
  stale-pr-label: Stale
  exempt-all-milestones: false
  operations-per-run: 30
  remove-stale-when-updated: true
  debug-only: false
  ascending: false
  delete-branch: false
  exempt-all-assignees: false
  exempt-draft-pr: false
  enable-statistics: true
  ignore-updates: false
  include-only-assigned: false
env:
  file_changed: true
The saved state was not found, the process starts from the first issue.
Starting the stale action process...
Processing the batch of issues  #1  containing  1  issue...
[#79] Pull request #79
[#79] Found this pull request last updated at: 2025-01-15T02:21:16Z
[#79] The option only-labels (​https://github.com/actions/stale#only-labels​) was not specified
[#79] └── Continuing the process for this pull request
[#79] Days before pull request stale: 0
[#79] The pull request is not closed nor locked. Trying to remove the close label...
[#79] ├── The close-pr-label (​https://github.com/actions/stale#close-pr-label​) option was not set
[#79] └── Skipping the removal of the close label
[#79] This pull request does not include a stale label
[#79] The option any-of-labels (​https://github.com/actions/stale#any-of-labels​) was not specified
[#79] └── Continuing the process for this pull request
[#79] This pull request has no milestone
[#79] └── Skip the milestones checks
[#79] This pull request has no assignee
[#79] └── Skip the assignees checks
[#79] This pull request is not stale
[#79] The option ignore-updates (​https://github.com/actions/stale#ignore-updates​) is disabled. The stale counter will take into account updates and comments on t

--- a/.github/workflows/close-pr.yml
+++ b/.github/workflows/close-pr.yml
@@ -35,11 +35,8 @@ jobs:
           fi
       - name: Close PR if build.yml changed
         if: env.file_changed == 'true'
-        uses: actions/stale@v9
-        with:
-          days-before-pr-stale: 0
-          # Number of days before a pull request is closed.
-          days-before-pr-close: 0
-          # Message posted when closing a pull request.
-          stale-pr-message: |
-            This pull request has been automatically closed because you can not submit pr while build.yml changing.
+        run: |
+          curl -X PATCH \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d '{"state": "closed", "body": "This pull request has been automatically closed because you cannot submit PRs while build.yml is changing."}' \
+            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}"
