[skip ci]ci: fix(path): fix path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches: main
     paths:
-      - '.github/workflows/**'
+      - '.github/workflows/main.yml'
+      - '.github/workflows/check.yml'
       - 'action.yml'
       - 'tests/**'
 
