actions: fix release bug affecting id:release
when inputs.anykernel3=true && inputs.release=true the mv command
renames the zip file as ../../build instead of moving the zip file to
../../build.

when id:release runs and searches for the files in build to upload it
does not find that directory and causes an error in uploading the zip
file resulting in a missing zip file attachment on the release page.

Signed-off-by: nivranaitsirhc <cacc.greenleaflabworks@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -487,11 +487,12 @@ runs:
             test -f out/arch/${{ inputs.arch }}/boot/dtbo.img && cp -v out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/
 
             rm -rf -v AnyKernel3/.git* AnyKernel3/README.md
+            mkdir -p -v ../../build
             if [ ${{ inputs.release }} = false ]; then
                 cp AnyKernel3 ../../build -r -v
             else
                 zip Anykernel3-flasher.zip AnyKernel3/*
-                mv Anykernel3-flasher.zip ../../build -v
+                mv -v Anykernel3-flasher.zip ../../build/
             fi
             echo "::endgroup::"
          fi
