--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,16 +15,15 @@ jobs:
     - name: Build Kernel
       uses: dabao1955/kernel_build_action@main
       with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
-          kernel-dir: msm-4.19
-          kernel-branch: taffy
-          config: cas_defconfig
+          kernel-url: https://github.com/Star-Seven/android_kernel_samsung_exynos9820
+          kernel-branch: Susfs
+          config: extreme_d2s_defconfig
           arch: arm64
           aosp-gcc: true
           aosp-clang: true
           ksu: true
           ksu-version: main
-          android-version: 12
+          android-version: 14
           aosp-clang-version: r383902
           disable-lto: true
           anykernel3: true
