actions: chore: Include dtb on kernel package
ref: https://github.com/frstprjkt/kernel_build_action/commit/21bbe1b91e6173615d1049a30e31e076612b9789

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -510,6 +510,7 @@ runs:
             fi
 
             test -f out/arch/${{ inputs.arch }}/boot/dtbo.img && cp -v out/arch/${{ inputs.arch }}/boot/dtbo.img AnyKernel3/
+            test -f out/arch/${{ inputs.arch }}/boot/dtb && cp -v out/arch/${{ inputs.arch }}/boot/dtb AnyKernel3/
 
             rm -rf -v AnyKernel3/.git* AnyKernel3/README.md
             mkdir -p -v ../../build
