--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,7 +7,7 @@ on:
       - 'lxc/**'
       - '.github/workflows/check.yml'
       - 'kernelsu/**'
-      - 'tests/*.ts'
+      - 'tests/**'
 
 jobs:
   yaml-check:
