actions: fix(pack): fix path
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -510,7 +510,7 @@ runs:
                 cp -r -v AnyKernel3/* ../../build
             else
                 cd AnyKernel3 && zip Anykernel3-flasher.zip ./* && cd ..
-                mv -v Anykernel3-flasher.zip ../../build/
+                mv -v Anykernel3/Anykernel3-flasher.zip ../../build/
             fi
             echo "::endgroup::"
          fi
