--- a/action.yml
+++ b/action.yml
@@ -509,7 +509,7 @@ runs:
             if [ ${{ inputs.release }} = false ]; then
                 cp -r -v AnyKernel3/* ../../build
             else
-                cd AnyKernel3 && zip Anykernel3-flasher.zip ./* && cd ..
+                cd AnyKernel3 && zip AnyKernel3.zip ./* && cd ..
                 mv -v Anykernel3/Anykernel3-flasher.zip ../../build/
             fi
             echo "::endgroup::"
