--- a/action.yml
+++ b/action.yml
@@ -509,8 +509,7 @@ runs:
             if [ ${{ inputs.release }} = false ]; then
                 cp -r -v AnyKernel3/* ../../build
             else
-                cd AnyKernel3 && zip Anykernel3-flasher.zip ./* && cd ..
-                mv -v Anykernel3/Anykernel3-flasher.zip ../../build/
+                cd AnyKernel3 && zip Anykernel3-flasher.zip ./* && mv -v Anykernel3-flasher.zip .. && cd ..&& mv -v Anykernel3-flasher.zip ../../build/
             fi
             echo "::endgroup::"
          fi
